website/versioned_docs/version-0.6.0/cli-reference/gitops_ui_run.md
## gitops ui run

Runs gitops ui

```
gitops ui run [--log] [flags]
```

### Options

```
      --helm-repo-name string        the name of the Helm Repository resource to scan for profiles (default "weaveworks-charts")
      --helm-repo-namespace string   the namespace of the Helm Repository resource to scan for profiles (default "default")
  -h, --help                         help for run
  -l, --log                          enable logging for the ui
      --path string                  Path url
      --port string                  UI port (default "9001")
```

### Options inherited from parent commands

```
  -e, --endpoint string    The Weave GitOps Enterprise HTTP API endpoint
      --namespace string   The namespace scope for this operation (default "wego-system")
  -v, --verbose            Enable verbose output
```

### SEE ALSO

* [gitops ui](gitops_ui.md)	 - Manages Gitops UI

###### Auto generated by spf13/cobra on 16-Dec-2021
